@@ -47,7 +47,8 @@
 
 (fn form-select-add-option (x txt &optional (attrs nil))
   (with (select-element  (x.get "<select")
-         option-element  (make-extended-element "option" attrs))
+         option-element  (aprog1 ($$ '(option))
+                           (!.attrs attrs)))
     (option-element.add-text txt)
     (select-element.add option-element)))
 
@@ -63,7 +64,7 @@
 
 (fn form-select-add-string-list-options (select-element options)
   (when options
-    (let option-element (make-extended-element "option")
+    (let option-element ($$ '(option))
       (option-element.add-text (list-string options.))
       (select-element.add option-element))
     (form-select-add-string-list-options select-element .options)))
